Fix sub-collection truncation and data binding in planet-tag-input-dialog

--- a/src/app/shared/forms/planet-tag-input-dialog.scss
+++ b/src/app/shared/forms/planet-tag-input-dialog.scss
@@ -57,4 +57,14 @@
 .count {
   white-space: nowrap;
   margin-left: 0.25rem;
+  flex-shrink: 0;
+}
+
+planet-tag-input-toggle-icon {
+  flex-shrink: 0;
+}
+
+.ellipsis-text {
+  flex: 1;
+  min-width: 0;
 }
